--- a/portfolio-application/package.json
+++ b/portfolio-application/package.json
@@ -6,10 +6,11 @@
   },
   "devDependencies": {
     "@open-wc/building-rollup": "^1.0.0",
+    "@web/dev-server": "^0.0.12",
     "deepmerge": "^4.2.2",
     "rimraf": "^2.6.3",
     "rollup": "^2.3.4",
-    "@web/dev-server": "^0.0.12"
+    "rollup-plugin-copy": "^3.3.0"
   },
   "name": "portfolio-application",
   "version": "0.0.0",
