--- a/portfolio-application/package.json
+++ b/portfolio-application/package.json
@@ -1,8 +1,8 @@
 {
   "scripts": {
     "build": "rimraf dist && rollup -c rollup.config.js",
-    "start:build": "npm run build && web-dev-server --root-dir dist --app-index index.html --open --compatibility none",
-    "start": "web-dev-server --app-index index.html --node-resolve --open --watch"
+    "start:build": "npm run build && web-dev-server --root-dir dist --app-index local_index.html --open --compatibility none",
+    "start": "web-dev-server --app-index local_index.html --node-resolve --open --watch"
   },
   "devDependencies": {
     "@open-wc/building-rollup": "^1.0.0",
