--- a/portfolio-application/package.json
+++ b/portfolio-application/package.json
@@ -2,11 +2,11 @@
   "scripts": {
     "build": "rimraf dist && rollup -c rollup.config.js",
     "start:build": "npm run build && web-dev-server --root-dir dist --app-index local_index.html --open --compatibility none",
-    "start": "web-dev-server --app-index local_index.html --node-resolve --open --watch"
+    "start": "web-dev-server --app-index local_index.html --node-resolve --watch"
   },
   "devDependencies": {
     "@open-wc/building-rollup": "^1.0.0",
-    "@web/dev-server": "^0.0.12",
+    "@web/dev-server": "0.0.12",
     "deepmerge": "^4.2.2",
     "rimraf": "^2.6.3",
     "rollup": "^2.3.4",
