--- a/portfolio-application/package.json
+++ b/portfolio-application/package.json
@@ -1,11 +1,13 @@
 {
   "scripts": {
-    "build": "rimraf dist && rollup -c rollup.config.js",
-    "start:build": "npm run build && web-dev-server --root-dir dist --app-index local_index.html --open --compatibility none",
+    "build": "rimraf dist && rollup -c rollup.config.js --environment OUTPUTDIR:dist,BASEDIR:",
+    "build:gh-pages": "rimraf gh-pages && rollup -c rollup.config.js --environment OUTPUTDIR:gh-pages,BASEDIR:portfolio",
+    "start:build": "npm run build && web-dev-server --root-dir ./dist  --node-resolve --compatibility none",
     "start": "web-dev-server --app-index local_index.html --node-resolve --watch"
   },
   "devDependencies": {
     "@open-wc/building-rollup": "^1.0.0",
+    "@rollup/plugin-replace": "^2.3.3",
     "@web/dev-server": "0.0.12",
     "deepmerge": "^4.2.2",
     "rimraf": "^2.6.3",
