--- a/portfolio-application/package.json
+++ b/portfolio-application/package.json
@@ -1,10 +1,11 @@
 {
   "scripts": {
     "build": "rimraf dist && rollup -c rollup.config.js --environment OUTPUTDIR:dist,BASEDIR:",
-    "build:gh-pages": "rimraf gh-pages && rollup -c rollup.config.js --environment OUTPUTDIR:gh-pages,BASEDIR:portfolio",
-    "gsp:gh-pages": "git add gh-pages -f && git commit -m'update gh-pages' && git subtree push --prefix portfolio-application/gh-pages origin gh-pages",
+    "build:gh-pages": "rimraf gh-pages && rollup -c rollup.config.js --environment OUTPUTDIR:gh-pages,BASEDIR:portfolio/",
     "start:build": "npm run build && web-dev-server --root-dir ./dist  --node-resolve --compatibility none",
-    "start": "web-dev-server --app-index local_index.html --node-resolve --watch"
+    "start": "web-dev-server --app-index local_index.html --node-resolve --watch",
+    "gsp:gh-pages": "cd .. ; git add portfolio-application/gh-pages -f ; git commit -m'update gh-pages' ; git subtree push --prefix portfolio-application/gh-pages origin gh-pages",
+    "gsp:gh-pages:force": "git push origin `git subtree split --prefix portfolio-application/gh-pages gh-pages`:gh-pages --force"
   },
   "devDependencies": {
     "@open-wc/building-rollup": "^1.0.0",
