--- a/portfolio-application/package.json
+++ b/portfolio-application/package.json
@@ -22,7 +22,8 @@
   "author": "portfolio-application",
   "license": "MIT",
   "dependencies": {
-    "lit-html": "^1.0.0",
-    "lit-element": "^2.0.1"
+    "@vaadin/router": "^1.7.2",
+    "lit-element": "^2.0.1",
+    "lit-html": "^1.0.0"
   }
 }
