--- a/portfolio-application/package.json
+++ b/portfolio-application/package.json
@@ -9,6 +9,8 @@
   },
   "devDependencies": {
     "@open-wc/building-rollup": "^1.0.0",
+    "@rollup/plugin-dynamic-import-vars": "^1.1.0",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-replace": "^2.3.3",
     "@web/dev-server": "0.0.12",
     "deepmerge": "^4.2.2",
