--- a/portfolio-application/package.json
+++ b/portfolio-application/package.json
@@ -13,6 +13,7 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-replace": "^2.3.3",
     "@web/dev-server": "0.0.12",
+    "@web/dev-server-rollup": "^0.2.10",
     "deepmerge": "^4.2.2",
     "rimraf": "^2.6.3",
     "rollup": "^2.3.4",
