disable development mode by default

--- a/portfolio-application/package.json
+++ b/portfolio-application/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
-    "build": "rimraf dist && rollup -c rollup.config.js --environment OUTPUTDIR:dist,BASEDIR:",
-    "build:gh-pages": "rimraf gh-pages && rollup -c rollup.config.js --environment OUTPUTDIR:gh-pages,BASEDIR:portfolio/",
+    "build": "rimraf dist && rollup -c rollup.config.js --environment OUTPUTDIR:dist,ENVIRONMENT:production",
+    "build:gh-pages": "rimraf gh-pages && rollup -c rollup.config.js --environment OUTPUTDIR:gh-pages,BASEDIR:portfolio/,ENVIRONMENT:production",
     "start:build": "npm run build && web-dev-server --root-dir ./dist --node-resolve --compatibility none",
     "start": "web-dev-server --app-index local_index.html --node-resolve --watch",
     "gsp:gh-pages": "cd .. ; git add portfolio-application/gh-pages -f ; git commit -m'update gh-pages' ; git subtree push --prefix portfolio-application/gh-pages origin gh-pages",
