--- a/portfolio-application/package.json
+++ b/portfolio-application/package.json
@@ -26,6 +26,7 @@
   "license": "MIT",
   "dependencies": {
     "@github/details-menu-element": "^1.0.9",
+    "@google/model-viewer": "^1.4.1",
     "@reduxjs/toolkit": "^1.4.0",
     "@vaadin/router": "^1.7.2",
     "lit-element": "^2.0.1",
