adjust docker settings for easier local development

--- a/compose.yml
+++ b/compose.yml
@@ -10,7 +10,6 @@ services:
       - NODE_ENV=production
     volumes:
       - ./portfolio-application:/app
-      - /app/dist
     ports:
       - 8000:8000
-    command: "npm run start:dist"
+    command: "npm run start:build"
